--- a/css/main.css
+++ b/css/main.css
@@ -65,14 +65,17 @@ footer {
 
   #column-1 {
     background-color:#0DC4D9 ;
+	
   }
 
   #column-2 {
     background-color:#07F2DB ;
+	
   }
 
   #column-3 {
     background-color: #F2CC0C;
+	width: 100%;
   }
 
   footer {
@@ -86,18 +89,22 @@ footer {
 @media (min-width: 1200px) {
   header {
     background-color:#B9CDC0 ;
+	
   }
 
   #column-1 {
     background-color: #D1DDD1;
+	width: 33.3%
   }
 
   #column-2 {
     background-color:#F8E6CC ;
+	width: 33.3%
   }
 
   #column-3 {
     background-color: #EBC7B4;
+	width: 33.3%
   }
 
   footer {
